--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,159 @@
-.App {
-  text-align: center;
+:root {
+    --color-primary: #FF6060;
+    --color-primary-dark: #d74d4d;
+    --color-secondary: #F7F7F7;
+    --color-white: #FFF;
+    --color-black: #000;
+    --background-shadow-card: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+    --font-family: 'Montserrat', Tahoma, Geneva, Verdana, sans-serif;
+    --font-size-smallest: 10px;
+    --font-size-small: 12px;
+    --font-size-smaller: 14px;
+    --font-size: 18px;
+    --font-size-medium: 24px;
+    --font-size-ml: 30px;
+    --font-size-large: 36px;
+    --font-size-extra-large: 48px;
+    --font-size-404: 288px;
+    --font-size-404-mobile: 96px;
+    --font-weight: 400;
+    --font-weight-medium: 500;
+    --font-weight-bold: 700;
+    --border-radius: 10px;
+    --card-width: 340px;
+    --card-height: 340px;
+    --card-width-small: 335px;
+    --card-height-small: 255px;
+    --card-padding: 20px;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+::-webkit-scrollbar {
+    width: 10px;
+    position: absolute;
+}
+::-webkit-scrollbar-track {
+    background: black;
+}
+::-webkit-scrollbar-thumb {
+    background: linear-gradient(180deg, transparent 0%, var(--color-primary) 50%, transparent 100%);
+}
+::-webkit-scrollbar-button {
+    display: none;
+}
+* {
+    scrollbar-width: thin;
+    scrollbar-color: var(--color-primary) #eee;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+html, body, #root {
+    min-height: 100vh;
+    scrollbar-gutter: stable;
+    /* IGNORE the error, this is needed to reserve space for scrollbar and hide it*/
+    overflow: overlay;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#root {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+body {
+    position: relative;
+    margin: 0;
+    background-color: var(--color-white);
+    color: var(--color-white);
+    font-family: 'Montserrat', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 0;
+}
+header {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    height: 108px;
+    width: 100%;
+    padding: 40px 7% 0 7%;
+}
+header, main {
+    max-width: 1680px;
+}
+main {
+    padding: 0 7%;
+    flex: 1;
+}
+footer {
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    height: 209px;
+    background-color: var(--color-black);
+    color: var(--color-white);
+    bottom: 0;
+    text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer svg {
+    width: 122px;
+    height: 40px;
+    margin-bottom: 16px;
+}
+
+footer p {
+    margin-bottom: 29px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 34px;
+}
+
+@media (max-width: 990px) {
+    header {
+        height: 48px;
+        padding: 0 20px;
+        margin: 20px 0;
+    }
+    header svg {
+        width: 145px;
+        height: inherit;
+
+    }
+    header nav {
+        font-size: var(--font-size);
+        white-space: nowrap;
+    }
+    header nav li:last-child {
+        margin-left: 10px;
+    }
+    header nav a {
+        margin: 0;
+    }
+    main {
+        width: 100%;
+        padding: 0 20px;
+    }
+    footer p {
+        font-size: var(--font-size);
+    }
+}
+
+@media (max-width: 450px) {
+    header nav {
+        font-size: var(--font-size-small);
+    }
+    nav ul {
+        margin: 0;
+    }
+    footer p {
+        font-size: var(--font-size-small);
+    }
 }
